# cardi_log

./: .gitignore  LICENSE  README.md  build_windows.ps1  cardi_log.db  pyproject.toml  verify_final_fixes.py  verify_responsive.py
.github/workflows/: build.yml
assets/: user_manual.md
scripts/: migrate_dates.py  seed_dad_data.py
src/: config.py  database.py  main.py  models.py  utils.py  utils_data.py  utils_forms.py
src/app_views/: action_log.py  admin.py  base_log.py  base_page.py  change_log.py  dad_log.py  dashboard.py  issue_log.py  layout.py  login.py  project_plan.py  project_view.py  risk_log.py  settings.py
tests/: verify_refactor.py
