[project]
name = "cardi-log"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ankit Mittal", email = "mr.ankit@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "sqlalchemy",
  "pandas",
  "openpyxl",
  "plotly",

  "numpy",
  "seaborn",
  "werkzeug"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.dumatics"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "cardi-log"

# company name to display in about app dialogs
company = "Dumatics"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Dumatics"

[tool.flet.app]
path = "src"

[tool.flet.splash]
color = "#222222"
dark_color = "#222222"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}